test/corpus/declarations.txt
================================================================================
Module declaration
================================================================================

module Main exposing (main)

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier)))))

================================================================================
Module with qualified name
================================================================================

module Sky.Core.String exposing (toUpper, toLower)

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier) (upper_identifier) (upper_identifier))
    (exposing_clause
      (exposed_value (lower_identifier))
      (exposed_value (lower_identifier)))))

================================================================================
Import declaration
================================================================================

module Main exposing (main)

import Sky.Core.String as String
import Std.Log exposing (println)

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (import_declaration
    (module_name (upper_identifier) (upper_identifier) (upper_identifier))
    (import_alias (upper_identifier)))
  (import_declaration
    (module_name (upper_identifier) (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier)))))

================================================================================
Foreign import
================================================================================

module Main exposing (main)

foreign import "fmt" exposing (println)

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (foreign_import_declaration
    (string)
    (exposing_clause (exposed_value (lower_identifier)))))

================================================================================
Type declaration with variants
================================================================================

module Main exposing (main)

type Page
    = CounterPage
    | AboutPage

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (type_declaration
    name: (upper_identifier)
    (type_variant (upper_identifier))
    (type_variant (upper_identifier))))

================================================================================
Type alias with record
================================================================================

module Main exposing (main)

type alias Model =
    { page : Page , count : Int }

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (type_alias_declaration
    name: (upper_identifier)
    type: (record_type
      (record_type_field
        name: (lower_identifier)
        type: (type_reference (upper_identifier)))
      (record_type_field
        name: (lower_identifier)
        type: (type_reference (upper_identifier))))))

================================================================================
Function-style let binding and empty record type
================================================================================

run cfg =
    let
        cors h =
            wrap cfg h
    in
    cors handler


init : {} -> Int
init _ =
    0

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (lower_identifier)
    (variable_pattern
      (lower_identifier))
    body: (let_expression
      (let_binding
        (variable_pattern
          (lower_identifier))
        (variable_pattern
          (lower_identifier))
        (call_expression
          (variable_expression
            (lower_identifier))
          (variable_expression
            (lower_identifier))
          (variable_expression
            (lower_identifier))))
      (call_expression
        (variable_expression
          (lower_identifier))
        (variable_expression
          (lower_identifier)))))
  (type_annotation_declaration
    name: (lower_identifier)
    type: (function_type
      (record_type)
      (type_reference
        (upper_identifier))))
  (function_declaration
    name: (lower_identifier)
    (wildcard_pattern)
    body: (integer)))

================================================================================
Uppercase smart-constructor function
================================================================================

Profile name age =
    { name = name, age = age }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (upper_identifier)
    (variable_pattern
      (lower_identifier))
    (variable_pattern
      (lower_identifier))
    body: (record_expression
      (record_field
        name: (lower_identifier)
        value: (variable_expression
          (lower_identifier)))
      (record_field
        name: (lower_identifier)
        value: (variable_expression
          (lower_identifier))))))
