test/corpus/expressions.txt
================================================================================
If expression
================================================================================

module Main exposing (main)

main =
    if x == 1 then "one" else "other"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (function_declaration
    name: (lower_identifier)
    body: (if_expression
      (binary_expression
        (variable_expression (lower_identifier))
        (integer))
      (string)
      (string))))

================================================================================
Lambda expression
================================================================================

module Main exposing (main)

main =
    \x y -> x + y

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (function_declaration
    name: (lower_identifier)
    body: (lambda_expression
      (variable_pattern (lower_identifier))
      (variable_pattern (lower_identifier))
      (binary_expression
        (variable_expression (lower_identifier))
        (variable_expression (lower_identifier))))))

================================================================================
List literal
================================================================================

module Main exposing (main)

main =
    [ 1 , 2 , 3 ]

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (function_declaration
    name: (lower_identifier)
    body: (list_expression (integer) (integer) (integer))))

================================================================================
Record expression
================================================================================

module Main exposing (main)

main =
    { name = "Sky" , version = 1 }

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (function_declaration
    name: (lower_identifier)
    body: (record_expression
      (record_field
        name: (lower_identifier)
        value: (string))
      (record_field
        name: (lower_identifier)
        value: (integer)))))

================================================================================
Tuple expression
================================================================================

module Main exposing (main)

main =
    ( 1 , "hello" )

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name (upper_identifier))
    (exposing_clause (exposed_value (lower_identifier))))
  (function_declaration
    name: (lower_identifier)
    body: (tuple_expression (integer) (string))))

================================================================================
If inside a tuple in a case branch
================================================================================

f m =
    case m of
        A ->
            ( if a then
                b

              else
                c
            , d
            )

        B ->
            e

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (lower_identifier)
    (variable_pattern
      (lower_identifier))
    body: (case_expression
      (variable_expression
        (lower_identifier))
      (case_branch
        (constructor_pattern
          (upper_identifier))
        (tuple_expression
          (if_expression
            (variable_expression
              (lower_identifier))
            (variable_expression
              (lower_identifier))
            (variable_expression
              (lower_identifier)))
          (variable_expression
            (lower_identifier))))
      (case_branch
        (constructor_pattern
          (upper_identifier))
        (variable_expression
          (lower_identifier))))))

================================================================================
Multi-line string with interpolation
================================================================================

greeting =
    """Hello {{name}},
your score is {{toString score}}.
Braces \{{ are escaped."""

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (lower_identifier)
    body: (multiline_string)))

================================================================================
Comment inside a list
================================================================================

x =
    [ -- comment
      a
    , b
    ]

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (lower_identifier)
    body: (list_expression
      (line_comment)
      (variable_expression
        (lower_identifier))
      (variable_expression
        (lower_identifier)))))
